--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,12 @@
     "fstream": "cpp",
     "sstream": "cpp",
     "streambuf": "cpp",
-    "list": "cpp"
+    "list": "cpp",
+    "chrono": "cpp",
+    "condition_variable": "cpp",
+    "ctime": "cpp",
+    "ratio": "cpp",
+    "mutex": "cpp",
+    "thread": "cpp"
   }
 }
