#协程调度模块 实现协程调度器scheduler

--- a/Test/Makefile
+++ b/Test/Makefile
@@ -1,13 +1,25 @@
-VPATH := ../Coroutine
-prom = testCoroutine
-src = testCoroutine.cpp Coroutine.cpp
-obj = $(src:.cpp=.o)  # 将源文件转换为目标文件
+VPATH := ../Coroutine:../Scheduler:../Thread:..
+# prom = testCoroutine
+# src = testCoroutine.cpp Coroutine.cpp
+# obj = $(src:.cpp=.o)  # 将源文件转换为目标文件
 
-$(prom): $(obj)
+# $(prom): $(obj)
+# 	g++ $^ -o $@
+
+# %.o: %.cpp
+# 	g++ -c $< -o $@
+
+
+scprom=testScheduler
+scsrc=testScheduler.cpp Coroutine.cpp Scheduler.cpp Threads.cpp
+scobj = $(scsrc:.cpp=.o)
+
+$(scprom): $(scobj)
 	g++ $^ -o $@
 
 %.o: %.cpp
 	g++ -c $< -o $@
+
 
 # 设置依赖关系
 testCoroutine.o: testCoroutine.cpp Coroutine.h
